# sprint_4_async_api

./: .pre-commit-config.yaml  README.md  pyproject.toml
fastapi-solution/: .env.example  docker-compose.dev.yml  docker-compose.yml
fastapi-solution/env.example/elasticsearch/: .env.dev
fastapi-solution/env.example/postgres/: .env.dev
fastapi-solution/env.example/redis/: .env.dev
fastapi-solution/etl_postgres_to_elastic/: Dockerfile.dev  config.py  docker-entrypoint.dev.sh  main.py  pyproject.toml
fastapi-solution/etl_postgres_to_elastic/src/: extract.py  load.py  transform.py
fastapi-solution/etl_postgres_to_elastic/utils/: db_connections.py  es_others_mapping.json  logger.py  state.py  validators.py
fastapi-solution/fastapi/src/: docker-entrypoint.dev.sh  main.py
fastapi-solution/fastapi/src/api/v1/: actors.py  directors.py  films.py  genres.py  search.py  writers.py
fastapi-solution/fastapi/src/core/: config.py
fastapi-solution/fastapi/src/models/: actor.py  director.py  film.py  genre.py  writer.py
fastapi-solution/fastapi/src/services/: collection.py  detail.py
fastapi-solution/fastapi/src/tests/: mock_data.py  test_app.py
fastapi-solution/fastapi/src/tests/data/: get_actors_by_id.json  get_actors_data.json  get_directors_by_id.json  get_directors_data.json  get_films_by_id.json  get_films_data.json  get_genre_by_id.json  get_genres_data.json  (+3 more)
fastapi-solution/fastapi/src/utils/: mixin.py  service.py
fastapi-solution/nginx/conf.d/: fastapi.conf
fastapi-solution/postgres/: dump_09032023.sql  init.sql
tasks/: 07_genre_person_logic.md
(+6 files in other folders)
